# secure-auction-ledger

./: .gitignore  README.md
docs/: Class Diagram.drawio  Public_Ledger.drawio
public_ledger/: Cargo.toml  build.rs
public_ledger/src/: main.rs
public_ledger/src/app/: mod.rs  screens.rs
public_ledger/src/app/screens/: auction_screen.rs  bid_screen.rs  block_screen.rs  create_screen.rs  initial_screen.rs  join_screen.rs  menu_screen.rs  mod.rs  selection_screen.rs
public_ledger/src/auction/: mod.rs
public_ledger/src/auction/bid/: mod.rs
public_ledger/src/auction/signature/: mod.rs
public_ledger/src/blockchain/: block.rs  chain.rs  mod.rs
public_ledger/src/blockchain/block/: block.rs  block_body.rs  block_header.rs  mod.rs
public_ledger/src/blockchain/chain/: mod.rs
public_ledger/src/blockchain/transaction/: transaction.rs
public_ledger/src/kademlia/: mod.rs  routing_table.rs
public_ledger/src/kademlia/routing_table/: k_bucket.rs  node.rs  node_id.rs  params.rs
public_ledger/src/proto/: communication.proto
public_ledger/src/tests/: chain_test.rs  mod.rs  transaction_tests.rs
public_ledger/src/tests/tests/: block.rs  k_bucket.rs  node_id.rs  print_routing_table.rs  routing_table.rs
