[workspace]
members = [
    "src/main.rs",
    "src/blockchain/mod.rs",
    "src/blockchain/block/block.rs",
    "src/blockchain/block/block_body.rs",
    "src/blockchain/block/block_header.rs",
]

[package]
name = "public_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
ring = "0.17.13"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"