[package]
name = "public_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
ring = "0.17.13"
rand = "0.9.0"
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
eframe = "0.31.1"
egui = "0.31.1"
hex = "0.4.3"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"


[build-dependencies]
tonic-build = "0.13.0"
